--- a/src/app/_components/about/about.component.scss
+++ b/src/app/_components/about/about.component.scss
@@ -14,18 +14,19 @@
   flex-wrap: wrap;
   align-content: flex-start;
   margin: -24px;
-  width: 707px;
-  height: 665px;
+  // width: 707px;
+  width: 750px;
+  // height: 665px;
 }
 
 .dialog-details {
   flex: 1 0 100%;
   display: flex;
-  justify-content: space-between;
   flex-flow: row wrap;
+  justify-content: space-between;
   padding: 24px 24px 0 24px;
   margin-bottom: 20px;
-
+  
   .highlight {
     border: 1px solid #8A8A8A;
     border-radius: 4px;
@@ -49,19 +50,45 @@
 
 .dialog-preview {
   flex: 0 1;
-  padding: 0 0 0 24px;
+  height: 508px + 28px;
+  padding: 0 0 24px 24px;
   
   img {
     border-radius: 4px;
     border: 3px solid black;
     width: 250px;
+    transition: opacity 1s;
+    opacity: 0;
+  }
+
+  img.ng-lazyloaded {
+    opacity: 1;
   }
 
   .highlight {
     border: 1px solid #8A8A8A;
+    // font-family: 'Manrope', sans-serif;
     border-radius: 4px;
     padding: 12px 12px;
     margin-top: 8px;
+
+    .mat-divider {
+      margin: 4px 0;
+    }
+
+    .text {
+      margin-top: 50px;
+    }
+
+    .head {
+      font-weight: bold;
+      color: white;
+    }
+
+    .key {
+      font-weight: bold;
+      color: #BEBEBE;
+    }
 
     .spacer {
       display: block;
@@ -73,36 +100,55 @@
 .dialog-info {
   flex: 1 0;
   padding-left: 20px;
-  height: 553px;
+  height: 508px + 28px;
   
+  .header {
+    position: sticky;
+    top: 0;
+  }
+
   .title {
     padding-right: 24px;
     margin-bottom: 16px;
 
     .en {
-      margin: 0;
-      font-size: 1.5em;
+      font-family: 'Manrope', sans-serif;
       text-align: center;
+      font-weight: 700;
+      font-size: 1.5em;
+      margin-bottom: 4px;
     }
     
     .int {
-      margin: 0;
+      font-family: 'Manrope', sans-serif;
       text-align: center;
-      margin-top: 8px;
+      font-weight: 700;
+      margin: 8px 0 0 0;
     }
   
     .head {
-      margin-top: 16px;
-      font-size: 1.2em;
+      margin: 24px 0 16px 0;
+      font-size: 1.6em;
       text-align: left;
-      font-weight: 500;
     }
   
     .synopsis {
+      font-family: Verdana, Arial;
+      line-height: 16.5px;
+      font-size: 11px;
       margin-top: 12px;
     }
-  }
 
+    .link {
+      color: #007bff;
+      cursor: pointer;
+
+      &:hover {
+        color: #0056b3;
+        text-decoration: underline;
+      }
+    }
+  }
 
   .black {
     padding: 0 24px 24px 0;
@@ -120,24 +166,23 @@
 
     .episode .mat-stroked-button {
       margin: 0 8px 8px 0;
-      width: 77.25px;
+      width: 86px;
     }
 
     .episode.more, .staff.more {
       display: inline;
-      width: 100%;
 
       .mat-stroked-button {
         width: 100%;
         margin: 0;
 
         &:nth-child(1) {
-          width: 166px;
+          width: 187.5px;
           margin: 0 4.5px 9px 0;
         } 
         
         &:nth-child(2) {
-          width: 166px;
+          width: 187.5px;
           margin: 0 0 9px 4.5px;
         }
       }
@@ -163,8 +208,22 @@
 .episode-data {
   padding-right: 24px;
 
-  .title p {
+  .title {
     font-size: 1.3em;
+    font-family: 'Manrope', sans-serif;
+    margin-bottom: 20px;
+    
+    .en {
+      text-align: left;
+      font-size: 1.3em;
+      font-weight: 700;
+    }
+    
+    .int {
+      text-align: left;
+      font-size: 1em;
+      font-weight: 700;
+    }
   }
 
   .preview img {
@@ -180,7 +239,13 @@
 
   .head {
     margin-top: 20px;
-    font-size: 1.1em;
+    font-size: 1.6em;
+  }
+
+  .context {
+    font-family: Verdana, Arial;
+    line-height: 18px;
+    font-size: 11px;
   }
 
   .mat-stroked-button {
