--- a/src/app/characters/characters.component.scss
+++ b/src/app/characters/characters.component.scss
@@ -1,4 +1,15 @@
 
+.overlay-content {
+  display: flex;
+  background-color: rgba(black, 0.5);
+  width: 100vw;
+  height: 100vh;
+  
+  .loading-box {
+    margin: auto;
+  }
+}
+
 .autocomplete {
   padding-top: 30ps;
 
@@ -13,57 +24,36 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-
-
-
-  @keyframes opacity-animation {
-    0% {
-      opacity: 1;
-    }
-    
-    100% {
-      opacity: 0;
-    }
-  }
-
-  .mat-ripple:hover {
-    // animation-name: opacity-animation;
-    animation-duration: 1.5s; 
-    animation-timing-function: ease-out; 
-    animation-delay: 0s;
-    animation-direction: alternate;
-    animation-iteration-count: 1;
-    animation-fill-mode: none;
-    animation-play-state: running; 
-  }
-  
-  .focus-character {
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-  }
-  
-  .bounce {
-    animation-iteration-count: 1;
-    animation-duration: 1s !important; 
-  }
-  
+  margin-bottom: 50px;
   
   .mat-ripple {
     margin: 10px 0;
+    border-radius: 4px;
   }
   
   .mat-card {
     width: 200px;
+    height: 311px;
     cursor: pointer;
-
-    .mat-card-content,
+    border: 2px solid white;
+    
     .mat-card-image {
-      border-bottom-left-radius: 4px;
-      border-bottom-right-radius: 4px;
+      height: 311px - 4px;
+      transition: opacity 1s, filter 1s;
+      opacity: 0;
+      filter: blur(10px);
+    }
+    
+    .mat-card-image.ng-lazyloaded {
+      opacity: 1;
+      filter: blur(0px);
     }
 
     .back {
+      // border: 1px solid red;
       margin: -16px;
       margin-top: -(52px + 16px + 100px);
+      transform: translateY(20px);
       padding: 16px;
       padding-top: 16px + 100px;
       background-image: linear-gradient(
@@ -80,21 +70,23 @@
         rgba(black, 0.2), 
         rgba(black, 0.1), 
         rgba(black, 0)
-      );
-      opacity: 0.5;
-      
-      p {
-        font-size: 16px;
-        visibility: hidden;
+        );
+        opacity: 0.5;
       }
-    }
     
     .front {
+      height: 40px;
+      display: flex;
+      // border: 1px solid blue;
       position: relative;
       z-index: 1;
       font-family: 'Rubik', sans-serif;
       font-size: 16px;
       margin-top: -36px;
+
+      span {
+        margin: auto 0;
+      }
     }
     
   }
