--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -15,7 +15,7 @@
       <mat-form-field color="accent">
         <mat-label>Enter {{ searchSelection }}</mat-label>
         <input matInput type="text" autocomplete="off" [(ngModel)]="text" #input="ngModel" (keypress)="onEnter($event)">
-        <button mat-icon-button matSuffix (click)="text = ''">
+        <button mat-icon-button matSuffix (click)="text = ''" *ngIf="text.length > 0">
           <mat-icon>clear</mat-icon>
         </button>
       </mat-form-field>
