chore: footer components initialize

--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -22,9 +22,9 @@
 
     <div class="information">
       <div>
-        <p class="entry">About</p>
-        <p class="entry">Contact us</p>
-        <p class="entry">Report issues</p>
+        <p class="entry" routerLink="/about">About</p>
+        <p class="entry" routerLink="/contact">Contact us</p>
+        <p class="entry" routerLink="/report-issue">Report issues</p>
       </div>
     </div>
     
