--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -17,8 +17,9 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: lighter;
 }
 
-.mat-ripple:focus,
+p:focus,
 .mat-fab:focus, 
+.mat-ripple:focus,
 .mat-button:focus,
 .mat-icon-button:focus,
 .mat-raised-button:focus,
