--- a/src/app/_components/about/about.component.scss
+++ b/src/app/_components/about/about.component.scss
@@ -48,9 +48,17 @@
   }
 }
 
+.anime-height {
+  max-height: 508px + 28px;
+}
+
+.manga-height {
+  max-height: 508px + 28px - 26px;
+}
+
 .dialog-preview {
   flex: 0 1;
-  // height: 508px + 28px - 26px;
+  // max-height: 508px + 28px - 26px;
   padding: 0 0 24px 24px;
   
   img {
@@ -67,7 +75,6 @@
 
   .highlight {
     border: 1px solid #8A8A8A;
-    // font-family: 'Manrope', sans-serif;
     border-radius: 4px;
     padding: 12px 12px;
     margin-top: 8px;
@@ -100,7 +107,7 @@
 .dialog-info {
   flex: 1 0;
   padding-left: 20px;
-  // height: 508px + 28px - 26px;
+  // max-height: 508px + 28px - 26px;
   
   .header {
     position: sticky;
