chore: footer credit link and added trending manga and anime

--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -4,7 +4,7 @@
 
     <div class="left">
 
-      <div class="credits">
+      <div class="credits" routerLink="/">
         <div class="icon">
           <mat-icon>whatshot</mat-icon>
         </div>
